Add JVM options in README.md