@@ -27,6 +27,9 @@ Please navigate to the folder and execute the following commands in your termina
 
 ## Run the application
 1. Run the class `com.ycrash.springboot.buggy.app.SpringBootBuggyApp` or the jar: `java -jar  target/ycrash.springboot*.jar`
+with the JVM options `-Xmx1G -XX:MaxMetaspaceSize=500M 
+   -XX:FlightRecorderOptions=stackdepth=128 
+   --add-opens=java.base/java.lang=ALL-UNNAMED`
 2. Open the application in the browser http://{your-host}:8090/swagger-ui.html to invoke the java performance problems using UI
 or curl command example 
 curl http://{your-host:8090}/v1/invoke/
